SDFPP/stylesheet.css
/*base css*/
body{
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #3F3D3D;
    padding: 2em;
}
h2{
    font-size: 12px;
}
.flex{
    display: flex;
    flex-direction: row;
}

/*card or box css*/
.card{
    background-color: #FFFFFF;
    border-radius: 20px;
    padding:12px;
    margin-bottom: 2em;
}
.incard{
    background-color: #E7F0EC;
    border-radius: 20px;
}

/*header flex:row plus css*/
header{
    display:flex;
    flex-direction: row;
    padding:0;
    gap:1em;
    justify-content: space-evenly;
}


.image{
    width: 50%;
    height:50%;
    border-radius: 20px;
    padding:0;
}
.name{
    border-radius: 20px;
    width:fit-content;
    padding: 1em;
}
.name h1{
    font-size: 16px;
}
.name p{
    font-size: 10px;
}*/

/*profeciency css*/
.flex .bar{
    justify-content: space-evenly;
}
.flex li{
    list-style: none;
    margin-bottom: 1em;
    margin-left: 0;
}
.list ul{
    padding-left: 0%;
}
.pone{
    border-radius: 3px;
    background-color: #4A8B70;
    width: 8em;
    list-style: none;
}

.ptwo{
    border-radius: 3px;
    background-color: #4A8B70;
    width: 7em;
    list-style: none;
}

.pnone{
    border-radius: 3px;
    background-color: #4A8B70;
    width: 10%;
    list-style: none;
}

.proficiency p, .proficiency li{
    font-size: 12px;
}
/*skills css*/
.skills ul{
    list-style: none;
    padding-left: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
.skills li{
    padding: 5px;
    background-color: #E7F0EC;
    margin-left: 10px;
    margin-bottom: 10px;
    border-radius: 20px;
    font-size: 10px;
}

/*projects css*/
.yearly{
    flex-wrap: wrap;
}
.yearly .incard{
    padding: .5em;
    margin: .5em;
    width: 40%;
}
.yearly .first{
    background-color: #4A8B70;
    color:#E7F0EC;
}
.year p{
    font-size: 10px;
}
.row{
    display: flex;
    flex-direction: row;
}
.row img{
    width:10%;
    height: 10%;
    align-self:center;
}
.row h2{
    flex-grow: 2;
}
/*education css*/
.education .incard{
   display: flex;
   flex-direction: row;
   font-size: 8px;
   padding: .5em;
   margin-bottom: 1em;
}
.education .school{
    background-color: #4A8B70;
    
    color:#E7F0EC;
}

/*tools css*//*
/*keeps h3 on top of inner card*/
.grid{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat(6,1fr);
}
/*keeps items in a row*/
.toolsflex{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat(1,1fr);
    gap: 1em;
}

.group .incard{
    grid-row:2/7;
    grid-column-start: 1;
    grid-column-end: 4;
    padding: .3em .5em .3em .5em;
    gap: 1em;
}
.group h3{
    grid-row: 1/3;
    grid-column: 2/3;
    z-index: 1;
    background-color: #3F3D3D;
    font-size: 5px;
    padding: .5em;
    border-radius: 59px;
    text-align: center;
    margin: auto;
}
.logo{
    width:40%;
}
.software .logo{
    height: 30%;
}
.group .software, .group .language{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}



/*experience css*/
.experience .incard{
    display: flex;
    flex-direction: row;
    font-size: 8px;
    margin-bottom: 1em;
    padding: 1em;
}
.callcenter{
    background-color: #4A8B70;
    color:#E7F0EC;
}
.right{
    display: inline;
}
.left h3{
    font-size: 10px;

}
.left sub{
    font-size: 8px;
    display: flex;
    flex-direction: row;
}

/*footer css*/
footer{
    background-color: #D76239;
    padding:2em;
    border-radius: 15px;
}

